# C-Pong-SDL

./: Ball.c  Ball.h  CMakeLists.txt  Collision.c  Collision.h  DeltaTime.c  DeltaTime.h  ScreenTransitions.c  ScreenTransitions.h  SharpKeywords.h  main.c  readme.md
SDL2-2.28.2/x86_64-w64-mingw32/include/SDL2/: SDL_surface.h
cmake/modules/: FindSDL2.cmake
